2007-10-11  Xavier Claessens  <xclaesse@gmail.com>

	* po/POTFILES.in: Add missing files.

2007-10-09  Xavier Claessens  <xclaesse@gmail.com>

	* configure.ac: Bump MissionControl version to 4.37, we uses new API
	introduced in that version.

2007-10-09  Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/empathy-main-window.c:
	* libempathy-gtk/empathy-contact-dialogs.c:
	* libempathy-gtk/empathy-contact-list-view.c:
	* libempathy-gtk/empathy-contact-dialogs.h:
	* libempathy-gtk/empathy-contact-widget.c:
	* libempathy-gtk/empathy-contact-widget.h:
	* libempathy-gtk/empathy-chat-window.c:
	* megaphone/src/megaphone-applet.c: More flexible API for
	EmpathyContactWidget, we now have flags to set editable each fields.
	Implement personal information menu item in main window.

2007-10-09  Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/empathy-contact-widget.glade:
	* libempathy-gtk/empathy-contact-widget.c:
	* libempathy-gtk/empathy-avatar-chooser.c:
	* libempathy-gtk/empathy-avatar-image.c: Makes avatar looks better in
	information and edit dialogs.

2007-10-08  Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/empathy-ui-utils.c:
	* libempathy-gtk/empathy-ui-utils.h:
	* libempathy-gtk/empathy-contact-widget.c:
	* libempathy-gtk/empathy-contact-widget.h:
	* libempathy-gtk/empathy-avatar-chooser.c:
	* libempathy-gtk/empathy-avatar-chooser.h:
	* libempathy-gtk/empathy-avatar-image.c:
	* libempathy-gtk/empathy-avatar-image.h:
	* libempathy-gtk/Makefile.am:
	* src/empathy.c: Implement EmpathyAvatarChooser and EmpathyAvatarImage
	and make use of them in contact information windows. That means we can
	now enlarge avatars when clicking on it and we can set our own avatar if
	we edit our own contact.

2007-10-03  Marco Barisione  <marco@barisione.org>

	* libempathy/empathy-contact-factory.c:
	* libempathy/empathy-tp-call.c:
	* libempathy/empathy-tp-group.c:
	* libempathy/empathy-utils.c: Initialize every GError to NULL. Fixes
	bug #482889.
